# ora-explain-plan-viz

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  changelog_claude.md  compose.yaml  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: deploy.yml
agent/: README.md  pyproject.toml
agent/oraplanviz_agent/: cli.py  db.py  server.py
agent/tests/: test_db.py  test_server.py
docs/plans/: agent-metadata-frontend.md  db-connect-agent.md  db-generated-share-url.md  rollout-v1-handoff.md  rollout-v1.md  share-url-large-plans.md
livetests/: README.md  run_all.sh
livetests/capture/: capture_all.sql
livetests/queries/: q1_star_rollup.sql  q2_cardinality_trap.sql  q3_window_spill.sql  q4_bom_explosion.sql  q5_partition_prune.sql  q6_partition_iterator.sql
livetests/reports/: q1_star_rollup.sqlmon.txt  q1_star_rollup.sqlmon.xml  q2_cardinality_trap.sqlmon.txt  q2_cardinality_trap.sqlmon.xml  q3_window_spill.sqlmon.txt  q4_bom_explosion.sqlmon.txt  q4_bom_explosion.sqlmon.xml  q5_partition_prune.sqlmon.txt  q5_partition_prune.sqlmon.xml  q6_partition_iterator.sqlmon.txt  q6_partition_iterator.sqlmon.xml
livetests/setup/: 00_create_user.sql  01_tables.sql
scripts/: README.md  capture-screenshots.mjs  gather_plan_metadata.sql  plan_to_url.sql
site/: index.html
site/assets/: README.md
src/: App.tsx  index.css
src/components/: AnnotationEditor.tsx  BaselineScriptModal.tsx  CollapsibleMiniMap.tsx  CommandPalette.tsx  CompareMetricSelector.tsx  (+20 more)
(+178 files in other folders)
